// Copyright 2019 Lightbend Inc.

syntax = "proto3";

package shopping.cart.actions;

import "akkaserverless/annotations.proto";
import "shoppingcart/persistence/shopping-cart-domain.proto";
import "google/protobuf/empty.proto";

// Receiving events from the broker. The analytics action itself does nothing,
// only logs what it receives.
service ShoppingCartAnalyticsService {
  // get ItemAdded from the topic
  rpc ProcessAdded(shopping.cart.model.ItemAdded) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing = {
      in: {
        topic: "shopping-cart-events"
      }
    };
  }
  // get ItemRemoved from the event-log
  rpc ProcessRemoved(shopping.cart.model.ItemRemoved) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing = {
      in: {
        topic: "shopping-cart-events"
      }
    };
  }
}
